--- a/css/disk.css
+++ b/css/disk.css
@@ -23,7 +23,7 @@ body {
     color: var(--white);
     font-weight: 400;
     letter-spacing: 0.05em;
-    background-image: url('/viperr/images/Group.png');
+    background-image: url('../images/Group.png');
     background-size: cover;
     background-attachment: fixed;
     background-blend-mode: luminosity;
@@ -89,11 +89,12 @@ body {
 .album-title {
     font-family: 'Michroma', 'Orbitron', sans-serif;
     font-size: 6rem;
-    font-weight: 400; /* Michroma не имеет вариантов жирности, используйте 400 */
+    font-weight: 400;
     letter-spacing: 0.1em;
     color: var(--pink);
     margin-bottom: 1rem;
-    text-transform: uppercase; /* Для полного соответствия стилю */
+    text-transform: uppercase;
+    
 }
 
 .tracklist-columns {
@@ -132,6 +133,7 @@ body {
     font-size: 0.9rem;
     font-weight: 400;
     color: var(--pink);
+    background-color: #000;
 }
 
 .track-controls {
@@ -157,7 +159,7 @@ body {
 .progress-bar {
     flex-grow: 1;
     height: 3px;
-    background: var(--gray);
+    background: var(--pink);
     -webkit-appearance: none;
     cursor: pointer;
     border-radius: 2px;
@@ -312,10 +314,12 @@ body {
     color:#ff0000;
     font-size: 15px;
     font-weight: 100;
+    background-color: #000;
 }
 
 .social-link {
     color: #ff0000;
+    background-color: #000;
 }
 
 @media (max-width: 768px) {
@@ -354,7 +358,6 @@ body {
     }
 }
 
-/* disk.css - добавить в медиазапрос */
 @media (max-width: 768px) {
     .tracklist-columns {
         grid-template-columns: 1fr;
@@ -413,8 +416,4 @@ body {
         width: 25px;
         height: 25px;
     }
-}
-
-.track, .play-btn {
-    touch-action: manipulation;
 }
